--- a/creative_agency/css/style.css
+++ b/creative_agency/css/style.css
@@ -52,6 +52,44 @@ section{
     z-index: 20;
 }
 
+.toggle{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 60px;
+    height: 60px;
+    background: #f60f20 url(../images/menu.png);
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position: center;
+    z-index: 20;
+    cursor: pointer;
+}
+
+.toggle.active{
+    background: #f60f20 url(../images/close.png);
+    background-size: 25px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.navigation{
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    z-index: 15;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navigation.active{
+    left: 0;
+}
+
 .home-content{
     position: relative;
     z-index: 10;
