--- a/creative_agency/css/style.css
+++ b/creative_agency/css/style.css
@@ -90,6 +90,49 @@ section{
     left: 0;
 }
 
+.navigation ul{
+    position: relative;
+}
+
+.navigation ul li{
+    position: relative;
+    list-style: none;
+    text-align: center;
+}
+
+.navigation ul li a{
+    font-size: 2.2rem;
+    text-decoration: none;
+    font-weight: 300;
+    color: #111;
+}
+
+.navigation ul li a:hover{
+    color: #f60f20;
+}
+
+.navigation .social-bar{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navigation .social-bar a{
+    display: inline-block;
+    transform: scale(0.5);
+}
+
+.navigation .email-icon{
+    position: absolute;
+    bottom: 20px;
+    transform: scale(0.5);
+}
+
 .home-content{
     position: relative;
     z-index: 10;
